--- a/registro/comple.html
+++ b/registro/comple.html
@@ -6,6 +6,7 @@
 	<title>Angeles Inc</title>
 	<link rel="icon" href="../imagenes/icono.png" />
 	<link rel="stylesheet" href="../css/normalize.css" />
+	<link rel="stylesheet" href="../css/iconos/style.css" />
 	<link rel="stylesheet" href="../css/style.css" />
 	<script src="../js/jquery_2_1_1.js"></script>
 	<script type="text/javascript">
@@ -18,29 +19,55 @@
 <body>
 	<header>
 		<figure id="logo">
-			<a href="../">
-				<img src="../imagenes/2.png" alt="logo" />
-			</a>
+			<center>
+				<a href="../">
+					<img src="../imagenes/2.png" alt="logo" />
+				</a>
+			</center>
 		</figure>
 		<aside id="extr">
-			<input type="search" id="bgnP" placeholder="Busqueda" />
-			<!-- <figure style="background-image:url(<?php echo $imaavatar ?>);"></figure> -->
+			<article id="avatar">
+			</article>
+			<article id="carrito">
+				<a href="../carrito.php">
+					<span class="icon-carritoi"></span>
+					<span id="decar">0</span>					
+				</a>
+			</article>
 		</aside>
 	</header>
-	<nav id="mnP">
-		<a href="../">Inicio</a>
-		<a href="../nosotros">Marca</a>
-		<a href="../campa">Colecciones</a>
-		<a href="../productos">Productos</a>
-		<a href="../video">Videos</a>
-		<a href="../prensa">Prensa</a>
-		<a href="../contacto">Donde Estamos</a>
-		<a href="../contacto/ind2x.php">Contáctenos</a>
-		<a href="../registro" class="selB">Mi perfil/Regístrate</a>
-	</nav>
-	<figure id="flecMnp">
-		<img src="abajo.png" alt="abajo" />
-	</figure>
+	<article id="mnuPp">
+		<nav id="mnP">
+			<ul>
+				<li><a href="../index.php">Inicio</a></li>
+				<li><a class="selB" href="../nosotros">Empresa</a></li>
+				<li><a href="../campa">Colecciones</a></li>
+				<li class="submen" data-num="1"><a href="../productos">Productos</a>
+				</li>
+				<li><a href="../prensa">Eventos</a></li>
+				<li class="submen" data-num="2"><a href="../contacto">Contacto</a>
+					<ul class="children2">
+						<li><a href="../contacto">Donde Estamos</a></li>
+						<li><a href="../contacto/ind2x.php">Contáctenos</a></li>
+					</ul>
+				</li>
+				<li><a href="../registro" id="reg">Usuario</a></li>
+			</ul>
+		</nav>
+		<article id="redes">
+			<a href="https://www.facebook.com/pages/Bodega-Los-Angeles-Inc/515911208524753?fref=ts" target="_blank"><span class="icon-facebook4"></span></a>
+			<a href="" target="_blank"><span class="icon-twitter4"></span></a>
+			<a href="https://instagram.com/losangelesinc/" target="_blank"><span class="icon-instagram2"></span></a>
+			<a href="https://www.youtube.com/results?search_query=bodega+los+angelesinc" target="_blank"><span class="icon-youtube5"></span></a>
+		</article>
+		<div id="mnmov"><span class="icon-menu"></span></div>
+		<article class="search">
+			<div id="bcicbs"><span class="icon-search"></span></div>
+			<div id="dish">
+				<input type="search" id="bgnP" placeholder="Busqueda" />
+			</div>
+		</article>
+	</article>
 	<section>
 		<h1>Registro Completado</h1>
 		<article id="automargen">
@@ -50,41 +77,33 @@
 		</article>
 	</section>
 	<footer>
+		<article id="redes" class="auclasmarg">
+			<a href="https://www.facebook.com/pages/Bodega-Los-Angeles-Inc/515911208524753?fref=ts" target="_blank"><span class="icon-facebook4"></span></a>
+			<a href="" target="_blank"><span class="icon-twitter4"></span></a>
+			<a href="https://instagram.com/losangelesinc/" target="_blank"><span class="icon-instagram2"></span></a>
+			<a href="https://www.youtube.com/results?search_query=bodega+los+angelesinc" target="_blank"><span class="icon-youtube5"></span></a>
+		</article>
 		<article id="automargen" class="footeflx">
 			<article class="columart">
 				<a href="../">Inicio</a>
-				<a href="../nosotros">Marca</a>
+				<a href="../nosotros">Empresa</a>
 				<a href="../campa">Colecciones</a>
 				<a href="../productos">Productos</a>
 				<a href="../video">Videos</a>
 			</article>
 			<article class="columart">
-				<a href="../prensa">Prensa</a>
+				<a href="../prensa">Eventos</a>
 				<a href="../contacto">Donde Estamos</a>
 				<a href="../contacto/ind2x.php">Contáctenos</a>
-				<?php
-					if ($inicius=="0") {
-				?>
-				<a href="../registro" class="selB">Mi perfil/Regístrate</a>
-				<?php
-					}
-					else{
-				?>
-				<a href="../usuario"><?php echo "$nomus"; ?></a>
-				<?php
-					}
-				?>
+				<a href="../registro">Mi perfil/Regístrate</a>
 				<div>
 					<a href="../politicas.php">Políticas</a> y <a href="../terminos.php">Terminos y condiciones</a>
 				</div>
-			</article>
-			<article class="columart">
-				<h2 id="Serv"><a href="#">Servicios</a></h2>
-			</article>
-			<article class="columart">
-				<h2>Diseño</h2>
-				<a href="http://conaxport.com/" target="_blank" id="cnxpt">Conaxport</a>
-			</article>
+			</article> 
+		</article>
+		<article class="fooffin">
+			CONAXPORT © 2015 &nbsp;&nbsp;todos los derechos reservados &nbsp;- &nbsp;PBX (5) 841 733 &nbsp;&nbsp;Cúcuta - Colombia &nbsp;&nbsp;
+			<a href="http://conaxport.com/" target="_blank">www.conaxport.com</a>
 		</article>
 	</footer>
 </body>
